# grind-attack-poc

./: .pre-commit-config.yaml  README.md  cabal.project  flake.nix
grind-attack-poc/: grind-attack-poc.cabal
grind-attack-poc/app/: App.hs
grind-attack-poc/lib/: Lib.hs
nix/: outputs.nix  project.nix  shell.nix
